# N-body-simulation

./: CMakeLists.txt  README.md  constants.h  cuda_simulation.cu  cuda_simulation.h  main.cpp  sierpinski2d.cpp  simulation.cpp  simulation.h
